# zkevm-circuits

./: .gitignore  Cargo.toml
bus-mapping/: Cargo.toml
circuit-benchmarks/: Cargo.toml
eth-types/: Cargo.toml
eth-types/src/: evm_types.rs  lib.rs
gadgets/: Cargo.toml
integration-tests/: Cargo.toml
keccak256/: Cargo.toml
zkevm-circuits/: Cargo.toml
zkevm-circuits/src/: lib.rs
zkevm-circuits/src/evm_circuit/: step.rs
zkevm-circuits/src/sha256_circuit/: sha256_bit.rs
