[package]
name = "gadgets"
version = "0.1.0"
edition = "2021"
authors = ["The appliedzkp team"]
license = "MIT OR Apache-2.0"

[dependencies]
# halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }
halo2_proofs = { version = "0.2.0", path = "../../privacy-scaling-explorations/halo2/halo2_proofs" }
sha3 = "0.7.2"
eth-types = { path = "../eth-types" }
digest = "0.7.6"
strum = "0.24"

[dev-dependencies]
rand_xorshift = "0.3"
rand = "0.8"
